frontend/src/_table.css
@layer components {
    .table-actions {
        @apply h-16 w-full flex flex-row content-inset-x;
    }

    .table-actions-start {
        @apply flex flex-1 flex-row sm:justify-start items-center mb-1 sm:mb-0;
    }

    .table-actions-end {
        @apply flex flex-grow flex-row sm:justify-end items-center mb-1 sm:mb-0;
    }

    .thead {
        th {
            @apply first:content-inset-x;
            @apply border-0 border-y border-border-default text-left font-medium text-content-lighter bg-background-default;
            @apply py-3 px-5 xl:px-0;
        }
    }

    th.sortable {
        @apply py-0 px-0;

        a {
            @apply py-3 pl-6 pr-5 xl:pr-0;
            color: inherit;
            display: flex;
        }

        &:hover {
            a {
                @apply pl-0;
            }

            .table-asc-icon {
                @apply text-content-light;
                display: block;
            }

            .table-desc-icon {
                @apply text-content-light;
                display: none;
            }
        }

        .table-asc-icon, .table-desc-icon  {
            display: none;
        }

        &[data-order-dir="asc"] {
            a {
                @apply pl-0;
            }

            .table-asc-icon {
                display: block; 
            }

            &:hover {
                .table-asc-icon {
                    display: none;
                }

                .table-desc-icon {
                    display: block;
                }
            }
        }

        &[data-order-dir="desc"]  {
            a {
                @apply pl-0;
            }

            .table-desc-icon {
                display: block; 
            }

            &:hover {
                .table-asc-icon {
                    display: block;
                }

                .table-desc-icon {
                    display: none;
                }
            }
        }
    }

    .tbody {
        tr {
            @apply even:bg-background-default border-t border-border-default hover:bg-background-hover;
        }

        td {
            @apply first:content-inset-x;
            @apply py-3 px-5 xl:px-0;

            &:has(a) {
                @apply p-0
            }

            &>a {
                @apply px-5 xl:px-0;
            }

            &:first-child:has(a)>a {
                @apply py-3 px-5 xl:px-0;
            }

            &:has(img) {
                @apply px-0 w-20;
            }

            img {
                @apply w-16 h-16;
                object-fit: contain;
            }
        }
    }

    .table.compact {
        .thead th {
            @apply text-xs;
        }

        .tbody td {
            @apply text-sm;

            &:has(a) {
                @apply p-0
            }

            a {
                @apply px-2 py-1;
            }

            &:first-child:has(a) a {
                @apply ps-1 md:ps-3 lg:pe-4;
            }
        }

        .thead th, .tbody td {
            @apply px-2 py-1;
            @apply first:ps-1 first:md:ps-3 first:lg:pe-4;
            @apply last:pe-1 last:md:pe-3 last:lg:pe-4;

            img {
                @apply h-[25px];
            }
        }
    }
}

